# LIBERO-X

./: LICENSE  README.md  eval_template.py  pyproject.toml  requirements.txt
docs/: index.html
libero/libero/: __init__.py
libero/libero/benchmark/: LEVEL1.py  LEVEL2.py  LEVEL3.py  LEVEL4.py  __init__.py  extension.py  multi_level_testset_builder.py
libero/libero/envs/: bddl_base_domain.py
libero/libero/envs/object_states/: base_object_states.py
libero/libero/envs/objects/: __init__.py  extension_objects.py  libero_x_objects.py  site_object.py  turbosquid_objects.py
libero/libero/envs/predicates/: __init__.py  base_predicates.py
libero/libero/envs/problems/: libero_floor_manipulation.py  libero_kitchen_tabletop_manipulation.py  libero_study_tabletop_manipulation.py
libero/libero/utils/: mu_utils.py  parse_bddl.py  task_generation_utils.py
libero/libero_x/LEVEL5/: L5-1.jsonl  L5-2.jsonl  L5-3.jsonl  L5-4.jsonl  L5-5.jsonl
libero/libero_x/bddl/LEVEL1/: EXTENSION_KITCHEN_SCENE10_black_bowl_right_bowl_drainer_and_green_bowl_left_bowl_drainer.bddl  EXTENSION_KITCHEN_SCENE10_green_bowl_right_bowl_drainer_and_black_bowl_left_bowl_drainer.bddl  EXTENSION_KITCHEN_SCENE10_place_the_wine_bottle_to_the_left_of_the_bowl_drainer.bddl  EXTENSION_KITCHEN_SCENE10_place_the_wine_bottle_to_the_right_of_the_bowl_drainer.bddl  EXTENSION_KITCHEN_SCENE11_place_the_black_bowl_on_the_flat_stove.bddl  EXTENSION_KITCHEN_SCENE11_place_the_black_bowl_on_the_flat_stove_and_turn_on_the_flat_stove.bddl  EXTENSION_KITCHEN_SCENE11_place_the_green_bowl_on_the_flat_stove.bddl  (+593 more)
(+4570 files in other folders)
